fixed 32747: Color Contrast in text editor

--- a/components/ILIAS/COPage/css/content.less
+++ b/components/ILIAS/COPage/css/content.less
@@ -1613,17 +1613,17 @@ pre.ilc_code_block_Code
 
 span.ilc_text_inline_Accent
 {
-	color: #6EA03C;
+	color: #087e0a;
 }
 
 span.ilc_text_inline_Attention
 {
-	color: #FA8228;
+	color: #CB4D16;
 }
 
 span.ilc_text_inline_Comment
 {
-	color: #F3DE2C;
+	color: #b31bff;
 }
 
 span.ilc_qetcorr_ErrorTextCorrected
@@ -1648,7 +1648,7 @@ span.ilc_text_inline_Quotation
 	letter-spacing: 0.2px;
 	font-style: italic;
 	font-family: serif;
-	color: #CDDC39;
+	color: #1B5FFF;
 	font-size: 114%;
 }
 
